--- a/images/galeria.html
+++ b/images/galeria.html
@@ -8,23 +8,24 @@
     <meta name="keywords" content=" papel reciclado artesanal ecologico medio ambiente reciclaje ">
     <!-- Bootstrap CSS -->
     <link href="../css/estilos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Gala Atelier de papel</title>
   </head>
-  <body  class="d-flex flex-column min-vh-100">
+  <body  class="  d-flex flex-column min-vh-100">
     <header class="container-fluid p-0 ">
       <div class="container p-0 ">
         <div class="row ">
           <div class="col-md-12" >
-              <nav class="navbar navbar-expand-md navbar-light animate__animated animate__fadeInDown p-0 ">
+              <nav class="navbar navbar-expand-md navbar-light  p-0 ">
                   <div class="container-fluid p-1">
-                    <a  class="navbar-brand" href="#"><img src="logotipo-gala2.png" alt="" width="240" height="140"> </a>
+                    <a  class="navbar-brand" href="../index.html"><img src="logotipo-gala2.png" alt="" width="240" height="140"> </a>
                     <button class="navbar-toggler" type="button btn-sm" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                       <ul class="navbar-nav ">
                         <li class="nav-item ">
-                          <a class="nav-link " aria-current="page" href="../index.html">Sobre Mi</a>
+                          <a class="nav-link " href="sobremi.html">Sobre Mi</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link " href="visionymision.html">Vision y Mision</a>
@@ -33,7 +34,7 @@
                           <a class="nav-link " href="quehago.html">Que Hago</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link active " href="galeria.html"> Galeria </a>
+                          <a class="nav-link active "  aria-current="page" href="galeria.html"> Galeria </a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link  " href="contacto.html"> Contacto </a>
@@ -55,23 +56,23 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-sm-6 ">
-                <img class="imagen"src="item2.jpg">
+                <img class="imagen"src="item2.jpg" alt="papel reciclado">
             </div>
             <div class="col-lg-4 col-sm-6 ">
-                <img class="imagen"src="papel5.jpg">
+                <img class="imagen"src="papel5.jpg"  alt="papel reciclado">
             </div>
             <div class="col-lg-4 col-sm-6 ">
-                <img class="imagen"src="papeles varios rectangulo.jpg">
+                <img class="imagen"src="papeles varios rectangulo.jpg"  alt="papel reciclado">
             </div>
         
             <div class="col-lg-4 col-sm-6 ">
-                <img class="imagen"src="item3.jpg">
+                <img class="imagen"src="item3.jpg"  alt="papel reciclado">
             </div>
             <div class="col-lg-4 col-sm-6 ">
-                <img class="imagen"src="papelrectangulo.jpg">
+                <img class="imagen"src="papelrectangulo.jpg"  alt="papel reciclado">
             </div>
             <div class="col-lg-4 col-sm-6 ">
-                <img class="imagen"src="item1.jpg">
+                <img class="imagen"src="item1.jpg"  alt="papel reciclado">
             </div>
         </div>
 
