--- a/images/quehago.html
+++ b/images/quehago.html
@@ -8,29 +8,30 @@
     <meta name="keywords" content=" papel reciclado artesanal ecologico medio ambiente reciclaje ">
     <!-- Bootstrap CSS -->
     <link href="../css/estilos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Gala Atelier de papel</title>
   </head>
-  <body  class="d-flex flex-column min-vh-100">
+  <body  class=" d-flex flex-column min-vh-100">
     <header class="container-fluid p-0 ">
       <div class="container p-0 ">
         <div class="row ">
           <div class="col-md-12" >
-              <nav class="navbar navbar-expand-md navbar-light animate__animated animate__fadeInDown p-0 ">
+              <nav class="navbar navbar-expand-md navbar-light p-0 ">
                   <div class="container-fluid p-1">
-                    <a  class="navbar-brand" href="#"><img src="logotipo-gala2.png" alt="" width="240" height="140"> </a>
+                    <a  class="navbar-brand" href="../index.html"><img src="logotipo-gala2.png" alt="" width="240" height="140"> </a>
                     <button class="navbar-toggler" type="button btn-sm" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                       <ul class="navbar-nav ">
                         <li class="nav-item ">
-                          <a class="nav-link " aria-current="page" href="../index.html">Sobre Mi</a>
+                          <a class="nav-link "  href="sobremi.html">Sobre Mi</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="visionymision.html">Vision y Mision</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link active" href="quehago.html">Que Hago</a>
+                          <a class="nav-link active" aria-current="page" href="quehago.html">Que Hago</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link  " href="galeria.html"> Galeria </a>
@@ -55,31 +56,20 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-sm-6">
-            <img class="rounded-circle" src="item1.jpg" width="100%">
-            <h3 class="text-center  mt-1">Item 1</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi libero, nih
-                il explicabo pe
-                rferendis aperiam r
-                epudiandae autem cum, odit, iste voluptatuur natus assumenda 
-                dio animi amet.</p>
+            <img class="rounded-circle" src="item2.jpg" alt="papel con semillas" width="100%">
+            <h3 class="text-center  mt-1">Papel reciclado plantable</h3>
+            <p>Papel elaborado con distintitas semillas para su posterior plantado y germinacion de las mismas. Cada semilla sera una planta. Tal vez lechuga, tal vez rucula. Otra manera de hacer papeleria.  </p>
             </div>
             <div class="col-lg-4 col-sm-6 ">
-                <img class="rounded-circle" src="item2.jpg" width="100%">
-                <h3 class="text-center  mt-1">Item 2</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi libero, nih
-                    il explicabo pe
-                    rferendis aperiam r
-                    epudiandae autem cum, odit, iste voluptatuur natus assumenda 
-                    dio animi amet.</p>
+                <img class="rounded-circle" src="item3.jpg" alt= "papel con flores" width= "100%">
+                <h3 class="text-center  mt-1">Papel para encuadernacion</h3>
+                <p> Distintos tipos de papeles donde se pueden incluir flores hilos o varios tipos de fibras para la realizacion de agendas, anotadores, cuadernos etc.
+                   </p>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img class="rounded-circle" src="item3.jpg" width="100%">
-                <h3 class="text-center  mt-1">Item 3</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi libero, nih
-                    il explicabo pe
-                    rferendis aperiam r
-                    epudiandae autem cum, odit, iste voluptatuur natus assumenda 
-                    dio animi amet.</p>
+                <img class="rounded-circle" src="item1.jpg"  alt="papel para tarjeteria" width="100%">
+                <h3 class="text-center  mt-1">Tarjeteria para eventos</h3>
+                <p>Diseño y producción de tarjetas y gráfica para eventos con diseños exclusivos y personalizados en distintos tipos de papel.</p>
                 </div>
         </div>
 
