--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content=" papel reciclado artesanal ecologico medio ambiente reciclaje ">
     <!-- Bootstrap CSS -->
     <link href="css/estilos.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Gala atelier de papel</title>
   </head>
     <body  class= "animate__animated animate__fadeIn d-flex flex-column min-vh-100">
@@ -18,14 +20,14 @@
               <div class="col-md-12" >
                   <nav class="navbar navbar-expand-md navbar-light animate__animated animate__fadeInDown p-0 ">
                       <div class="container-fluid p-1">
-                        <a  class="navbar-brand" href="#"><img src="images/logotipo-gala2.png" alt="" width="240" height="140"> </a>
+                        <a  class="navbar-brand"  aria-current="page" href="index.html"><img src="images/logotipo-gala2.png" alt="" width="240" height="140"> </a>
                         <button class="navbar-toggler" type="button btn-sm" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                           <ul class="navbar-nav ">
                             <li class="nav-item ">
-                              <a class="nav-link  active" aria-current="page" href="index.html">Sobre Mi</a>
+                              <a class="nav-link"  href="images/sobremi.html">Sobre Mi</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link " href="images/visionymision.html">Vision y Mision</a>
@@ -55,16 +57,16 @@
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                   <div class="carousel-inner " >
                     <div class="titulo">
-                      <h1>Gala atelier de papel reciclado y mucho mas</h1>
+                      <h1>Gala, atelier de papel reciclado</h1>
                     </div>
                     <div class="carousel-item active">
-                      <img src="images/carrousel1.jpg" class="d-block w-100 rounded-3" alt="...">
+                      <img src="images/carrousel1.jpg" class="d-block w-100 rounded-3" alt="papel reciclado con semillas">
                     </div>
                     <div class="carousel-item">
-                      <img src="images/carrousel2.jpg" class="d-block w-100 rounded-3" alt="...">
+                      <img src="images/carrousel2.jpg" class="d-block w-100 rounded-3" alt="papeles reciclado">
                     </div>
                     <div class="carousel-item">
-                      <img src="images/carrousel3.jpg" class="d-block w-100 rounded-3" alt="...">
+                      <img src="images/carrousel3.jpg" class="d-block w-100 rounded-3" alt="papel reciclado con flores">
                     </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -77,13 +79,8 @@
                   </button>
                 </div>
 
-
-                <h2 class="text-center  mt-3">Sobre Mi</h2>
                   
-                <p class= "text-center mt-2">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                <p class= "text-center mt-2"> Emprendimiento dedicado a la elabaoracion de papel hecho a mano, reciclado y sutentable. Es el objetivo promover la conciencia ecologica y el cuidado del ambiente en la ciudadania.
                 </p>
 
               </div>
